# TrueTune

./: .gitignore  CLAUDE.md  CREDITS.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioInput.cpp  AudioInput.h  CMakeLists.txt  FloatRing.h  PitchDetector.cpp  PitchDetector.h  native-lib.cpp
app/src/main/java/geo/truetune/: MainActivity.kt  TrueTuneApp.kt
app/src/main/java/geo/truetune/data/audio/: NativePitchStream.kt  PitchStreamBridge.kt
app/src/main/java/geo/truetune/data/prefs/: TunerPreferences.kt
app/src/main/java/geo/truetune/di/: AudioModule.kt
app/src/main/java/geo/truetune/domain/audio/: NoteNaming.kt  PitchReading.kt  PitchStream.kt
app/src/main/java/geo/truetune/domain/model/: TunerState.kt
app/src/main/java/geo/truetune/domain/music/: NoteMapper.kt
app/src/main/java/geo/truetune/presentation/diagnostics/: DiagnosticsScreen.kt  DiagnosticsViewModel.kt
app/src/main/java/geo/truetune/presentation/theme/: Color.kt  Theme.kt
app/src/main/java/geo/truetune/presentation/tuner/: TunerScreen.kt  TunerViewModel.kt
app/src/main/java/geo/truetune/presentation/tuner/components/: A4Sheet.kt  NoteDisplay.kt  TunerGauge.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/geo/truetune/domain/music/: NoteMapperTest.kt
gradle/: libs.versions.toml
